--- a/AXİOS/package.json
+++ b/AXİOS/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.5",
     "axios": "^1.7.9",
+    "lucide-react": "^0.475.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -27,8 +28,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.5",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^4.0.6",
     "vite": "^6.1.0"
   }
 }
